# cgm-glucose-trend-predictor

./: README.md  pyproject.toml
docs/: dataset-contract.md  model-roadmap.md
src/cgm_predictor/: __init__.py  cli.py  dataset.py  regression.py
tests/: test_model.py
